package ucf.assignments;

/*
 * UCF COP3330 Fall 2021 Assignment 4 Solution
 * Copyright 2021 Luis Hernandez
 */

public class App {
    public static void main(String[] args) {
        /*
        * Create a Home object
        * Call the Home object with its method
        */
    }
    public void start() {
        /*
        * Launch the FXML file using the FXMLLoader
        */
    }
}
