package ucf.assignments;

/*
 * UCF COP3330 Fall 2021 Assignment 4 Solution
 * Copyright 2021 Luis Hernandez
 */

public class Item {
    /*
    * private desc : String
    * private due date : String
    * private complete : boolean
    *
    * public Item(desc : String, due_date : String, complete : boolean)
    *
    */
    public String getDescription() {
        return "desc";
    }
    public String getDueDate() {
        return "due_date";
    }
    public boolean getComp() {
        return true; //the comp instance variable would be here
    }
    public void setDesc(String desc) {
        /*
        * instance variable desc = desc
        */
    }
    //set or modify the due date
    public void setDueDate(String due_date) {
        /*
        * instance variable due_date = due_date
        */
    }
    //set or modify the completion status
    public void setComplete(boolean complete) {
        /*
        * instance variable complete = complete
        */
    }
}