package ucf.assignments;

/*
 * UCF COP3330 Fall 2021 Assignment 4 Solution
 * Copyright 2021 Luis Hernandez
 */

import java.util.*;

public class Print {
    //print all the items in a to-do list
    public void printAll(ArrayList<Item> title) {
        /*
        * Print the title of the item
        * For as long as the list has an item
        *   Print the item
        */
    }
    //print only the completed items in a to-do list
    public void printComplete(ArrayList<Item> title) {
        /*
        * For as long as the list has an item
        *   If the getComp() method for the item is true
        *       Print the item
        */
    }
    //print only the incomplete items in a to-do list
    public void printIncomplete(ArrayList<Item> title) {
        /*
        * For as long as the list has an item
        *   If the getComp() method for the item is false
        *       Print the item
        */
    }
}
